@@ -52,6 +52,7 @@ Mantis
  * Modified project user module behavior.
  * Modified delete file attachments to chmod( 0775 ) so write permissions are granted.
  * Modified get_view_redirect_url() call on bug_assign.php to handle redirects better.
+ * Modified search to look in bugnotes.
  * Added Hungarian translation.
  * Added Japanese translation.
  * Added Czech translation.
